Opened 17 years ago
Closed 17 years ago
#1732 closed bug (fixed)
autodetecting resolution does not work for some grafix boards
Reported by: | stippi | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1/alpha1 |
Component: | Servers/app_server | Version: | R1/pre-alpha1 |
Keywords: | Cc: | euan | |
Blocked By: | Blocking: | ||
Platform: | x86 |
Description
I have an ATI X300 and a 1920x1200 LCD screen. A clean Haiku install boots into the "correct" resolution, but the app_server is only half aware of the resolution. The effect is that the screen and board seem to be in 1920x1200, but the app_server resolution is 1600x1200. The missing part on the right of the screen is filled with the contents of the left side, so the screen is repeated like this:
+-------------+-----+ | ... O| ... | | | | | | | | | | +-------------+-----+ ... -> icons O -> Deskbar
Another problem is that the 1920x1200 resolution is not in the list of available resolutions in the Screen preflet. Interestingly, selecting 1600x1200 does not change the setup. I would expect a true 1600x1200 resolution stretched on the screen.
I have another screen which has a native resolution of 1440x900, and with that screen (on the X300), the effects are exactly the same. The resolution of the screen and gfx board seem to be 1440x900 but the screen width of app_server reflects 4:3 with the left side repeated in the missing area.
Change History (14)
comment:1 by , 17 years ago
comment:2 by , 17 years ago
ps, I think when the display does this it should really be in a virtual panning desktop mode. But it doesn't seem to work.
comment:4 by , 17 years ago
It might be related to whatever is the EDID info provided by the monitor. It is printed in the syslog, right? I will try to obtain that and attach it here.
comment:5 by , 17 years ago
Just in case it might help, here is the edid of my working monitor
oem string: ATI RV370 EDID1: 4f EDID2: ebx 202 EDID3: 4f Got EDID! Vendor: HWP Product ID: 9846 Serial #: 16843009 Produced in week/year: 21/2007 EDID version: 1.3 Type: Digital Size: 52 cm x 33 cm Gamma=2.2 White (X,Y)=(0.313,0.329) Supported Future Video Modes: 1280x960@60Hz (id=16513) 1280x1024@60Hz (id=32897) 1280x1024@85Hz (id=39297) 1152x1152@60Hz (id=113) 1600x1600@60Hz (id=169) 1600x1200@60Hz (id=16553) 1680x1680@60Hz (id=179) 1920x1920@60Hz (id=209) Supported VESA Video Modes: 720x400@70 640x480@60 640x480x75 800x600@60 800x600@75 832x624@75 1024x768@60 1024x768@75 1280x1024@75 1152x870@75 Additional Video Mode: clock=154 MHz h: (1920, 1968, 2000, 2080) v: (1200, 1203, 1209, 1235) size: 51.9 cm x 32.4 cm border: 0 cm x 0 cm Horizontal frequency range = 30..94 kHz Vertical frequency range = 48..85 Hz Maximum pixel clock = 170 MHz Monitor Name: HP LP2465 Serial Number: CZK72101R8
comment:6 by , 17 years ago
these are interesting:
1680x1680@60Hz (id=179) 1920x1920@60Hz (id=209)
Did you manually trascribe the edid info?
If you can please attach a full syslog.
comment:7 by , 17 years ago
No that was copy & paste. They surely look strange. Native resolution is 1920*1200.
I can attach a full syslog in about 15 hours.
comment:8 by , 17 years ago
I would think the bug happens because of the dual link card stippi has, while Marcus is using that resolution with a single link card.
comment:12 by , 17 years ago
Because of your giant... monitor? :-) At least I remember overhearing a conversation between you and Marcus where he mentioned he would drive the same resolution you do with a single link card, where you said a dual link card would be needed for you. To drive that resolution with a single link card, your monitor and graphics card actually need to be able to reduce the blank time.
But if you're using a single link card, that's probably a moot point anyway ;-)
comment:13 by , 17 years ago
I remember the conversation vaguely, but I do have a single link card AFAIK. Marcus and I have the same resolution and it works by reducing the blank time indeed. I think I might have mentioned to Marcus about a monitor once built by IBM, which has four times the resolution at 22" (over 200 dpi?) and requires two dual links to even work at 24 fps refresh rate.
comment:14 by , 17 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
I have found the problem in the Radeon driver. Because it depends on which link you chose to plug in your screen, it also explains why it worked for Marcus and not for me. The repeated screen contents on the right side are an effect of how the Radeon driver handles non-native resolutions. It drives the screen at its native resolution, I think because it thinks the screen is a laptop panel that has no other capabilities, and then does nothing about the extra space (TODO in the code mentions there would be garbage there). Fixed in hrev26540.
This is probably a bug with the radeon driver. It's a tangled mess due to limitations in the scalers and all the various output paths on the card. Can you post a syslog so we can see what the driver is doing? I can repeat this, though when using dual DVI outputs at non native resolutions.