When switching ports, the code forgot to also switch the detected flatpanel parameters. This caused ticket #1732 for me. At another place in the code, the native resolution is added to the supported mode list and there it is hardcoded to the first flatpanel info.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@26540 a95241bf-73f2-0310-859d-f6bbb57e9c96